--- a/countdown.html
+++ b/countdown.html
@@ -21,7 +21,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tsparticles/2.12.0/tsparticles.bundle.min.js"></script>
 <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("November 5, 2024 0:00:00 GMT+0100").getTime();
+    var countDownDate = new Date("Augues 8, 2024 0:00:00 GMT+0100").getTime();
 
     // Update the countdown every 1 second
     var x = setInterval(function() {
@@ -44,7 +44,7 @@
         // If the countdown is over, write some text and run app.js
         if (distance < 0) {
             clearInterval(x);
-            document.getElementById("countdown").innerHTML = "HAPPY BIRTHDAY MAXINE";
+            document.getElementById("countdown").innerHTML = "HAPPY BIRTHDAY Hedge";
             // Run app.js here
             var script = document.createElement('script');
             script.src = "app.js";
