--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Maxine's Site</title>
-  <meta content="Maxine" property="og:title">
+  <title>Hedge's Site</title>
+  <meta content="Hedge" property="og:title">
   <meta content="Welcome" property="og:description">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,20 +31,20 @@
         <img src="https://avatars.githubusercontent.com/u/69131569?s=144&u=612587c270a0d369f9fd8ac00797ad492297c9b1&v=4" alt="Avatar" class="avatar">
       </div>
       <p class="greeting">Heya I'm
-      <p class="greeting-rainbow">Maxine</p>
+      <p class="greeting-rainbow">Hedge</p>
       <p class="details"><b>she/her</b><br>
         an 18 year old C# developer living in Germany with a passion for code, VR and music</p>
-      <a href="mailto:chaxinquiries@gmail.com" class="pill"><i class="fa-solid fa-envelope fa-lg"></i> <b>Contact
+      <a href="mailto:trenthancock123@gmail.com" class="pill"><i class="fa-solid fa-envelope fa-lg"></i> <b>Contact
           Me</b></a>
       <div class="bottom-container">
         <div class="icon-container">
-          <a href="https://github.com/Chax1" class="icon-circle" target="_blank">
+          <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
             <i class="fa-brands fa-github fa-lg"></i>
           </a>
-          <a href="https://steamcommunity.com/id/Chax4/" class="icon-circle" target="_blank">
+          <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
             <i class="fa-brands fa-steam fa-lg"></i>
           </a>
-          <a href="https://open.spotify.com/playlist/5fP2Lw1eLbRrGXZcoy1Wik?si=165e64fcb51b4f40&nd=1" class="icon-circle" target="_blank">
+          <a href="https://open.spotify.com/playlist/1zXmLj2CNySDBscDpcyyqd?si=cab9eab649054a09" class="icon-circle" target="_blank">
             <i class="fa-brands fa-spotify fa-lg"></i>
           </a>
         </div>
