--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     </video>
     <div class="container">
       <div class="avatar-container">
-        <img src="https://avatars.githubusercontent.com/u/69131569?s=144&u=612587c270a0d369f9fd8ac00797ad492297c9b1&v=4" alt="Avatar" class="avatar">
+        <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
       </div>
       <p class="greeting">Heya I'm
       <p class="greeting-rainbow">Hedge</p>
-      <p class="details"><b>she/her</b><br>
-        an 18 year old C# developer living in Germany with a passion for code, VR and music</p>
+      <p class="details"><b>he/him</b><br>
+        Im a 28 year old controls engineer in California USA. Hobbies include coding, electronics, and music.</p>
       <a href="mailto:trenthancock123@gmail.com" class="pill"><i class="fa-solid fa-envelope fa-lg"></i> <b>Contact
           Me</b></a>
       <div class="bottom-container">
