More image replacements and timezone correction.

--- a/countdown.html
+++ b/countdown.html
@@ -4,7 +4,7 @@
 <head>
     <title> ? </title>
     <link rel="stylesheet" href="birthday.css">
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/69131569?s=144&u=612587c270a0d369f9fd8ac00797ad492297c9b1&v=4">
+    <link rel="icon" type="image/x-icon" href="https://github.com/CodeHedge.png">
     <meta content="?" property="og:title" />
     <meta content="?" property="og:description" />
     <meta content="https://hedge.edgeofhedge.com/countdown" property="og:url" />
@@ -21,7 +21,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tsparticles/2.12.0/tsparticles.bundle.min.js"></script>
 <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("Augues 8, 2024 0:00:00 GMT+0100").getTime();
+    var countDownDate = new Date("August 8, 2024 00:00:00 GMT-0800").getTime();
 
     // Update the countdown every 1 second
     var x = setInterval(function() {
