--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="avatar-container">
         <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
       </div>
-      <p class="greeting">Heya I'm
+      <p class="greeting">Hello I'm
       <p class="greeting-rainbow">Hedge</p>
       <p class="details"><b>he/him</b><br>
         Im a 28 year old controls engineer in California USA. Hobbies include coding, electronics, and music.</p>
