--- a/index.html
+++ b/index.html
@@ -2,55 +2,62 @@
 <html lang="en">
 
 <head>
-  <title>Hedge's Site</title>
-  <meta content="Hedge" property="og:title">
-  <meta content="Welcome" property="og:description">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Josefin+Sans:wght@500&display=swap"
-    rel="stylesheet">
-  <script src="https://kit.fontawesome.com/04c5cc98c2.js" crossorigin="anonymous"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+    <title>Hedge's Site</title>
+    <meta content="Hedge" property="og:title">
+    <meta content="Welcome" property="og:description">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="https://github.com/CodeHedge.png">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Josefin+Sans:wght@500&display=swap"
+          rel="stylesheet">
+    <script src="https://kit.fontawesome.com/04c5cc98c2.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div class="cursor-dot" data-cursor-dot></div>
-  <div class="cursor-outline" data-cursor-outline></div>
-  <div class="overlay" id="volumeWarning">
-    <h4 style="font-size: 12pt;">[VOLUME/FLASHING LIGHTS WARNING]</h4>
-  </div>
-  <div id="actualContent">
-    <div id="particles-js"></div>
-    <video loop style="display: none;" id="bgVideo">
-      <source src="https://cdn.discordapp.com/attachments/1067540909736067123/1174507227567099965/Weval_-_Someday_Official_Video_720p_h264.mp4?ex=6567d818&is=65556318&hm=9d217f77fac33c2aca7cb3f31c5bda5a24314adc9c8adf119a9dc2a3b5150f42&" type="video/mp4">
-      Your browser does not support the video element.
-    </video>
-    <div class="container">
-      <div class="avatar-container">
-        <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
-      </div>
-      <p class="greeting">Hello I'm
-      <p class="greeting-rainbow">Hedge</p>
-      <p class="details"><b>he/him</b><br>
-        Im a 28 year old controls engineer in California USA. Hobbies include coding, electronics, and music.</p>
-      <a href="mailto:trenthancock123@gmail.com" class="pill"><i class="fa-solid fa-envelope fa-lg"></i> <b>Contact
-          Me</b></a>
-      <div class="bottom-container">
-        <div class="icon-container">
-          <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
-            <i class="fa-brands fa-github fa-lg"></i>
-          </a>
-          <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
-            <i class="fa-brands fa-steam fa-lg"></i>
-          </a>
-          <a href="https://open.spotify.com/playlist/1zXmLj2CNySDBscDpcyyqd?si=cab9eab649054a09" class="icon-circle" target="_blank">
-            <i class="fa-brands fa-spotify fa-lg"></i>
-          </a>
-        </div>
-      </div>
+    <div class="cursor-dot" data-cursor-dot></div>
+    <div class="cursor-outline" data-cursor-outline></div>
+    <div class="overlay" id="volumeWarning">
+        <h4 style="font-size: 12pt;">[VOLUME/FLASHING LIGHTS WARNING]</h4>
     </div>
-  </div>
+    <div id="actualContent">
+        <div id="particles-js"></div>
+        <video loop style="display: none;" id="bgVideo">
+            <source src="https://cdn.discordapp.com/attachments/1067540909736067123/1174507227567099965/Weval_-_Someday_Official_Video_720p_h264.mp4?ex=6567d818&is=65556318&hm=9d217f77fac33c2aca7cb3f31c5bda5a24314adc9c8adf119a9dc2a3b5150f42&" type="video/mp4">
+            Your browser does not support the video element.
+        </video>
+        <div class="container">
+            <div class="avatar-container">
+                <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
+            </div>
+            <p class="greeting">Hello I'm
+            <p class="greeting-rainbow">Hedge</p>
+            <p class="details">
+                <b>he/him</b><br>
+                Im a 28 year old controls engineer in California USA. Hobbies include coding, electronics, and music.
+            </p>
+            <a href="mailto:trenthancock123@gmail.com" class="pill">
+                <i class="fa-solid fa-envelope fa-lg"></i> <b>
+                    Contact
+                    Me
+                </b>
+            </a>
+            <div class="bottom-container">
+                <div class="icon-container">
+                    <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
+                        <i class="fa-brands fa-github fa-lg"></i>
+                    </a>
+                    <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
+                        <i class="fa-brands fa-steam fa-lg"></i>
+                    </a>
+                    <a href="https://open.spotify.com/playlist/1zXmLj2CNySDBscDpcyyqd?si=cab9eab649054a09" class="icon-circle" target="_blank">
+                        <i class="fa-brands fa-spotify fa-lg"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="particles.js"></script>
 <script src="app-particles.js"></script>
