Mute video since it's sick, add new audio

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
     </div>
     <div id="actualContent">
         <div id="particles-js"></div>
-        <video loop style="display: none;" id="bgVideo">
+        <video loop style="display: none;" id="bgVideo" muted>
             <source src="https://cdn.discordapp.com/attachments/1067540909736067123/1174507227567099965/Weval_-_Someday_Official_Video_720p_h264.mp4?ex=6567d818&is=65556318&hm=9d217f77fac33c2aca7cb3f31c5bda5a24314adc9c8adf119a9dc2a3b5150f42&" type="video/mp4">
             Your browser does not support the video element.
         </video>
+        <audio id="bgAudio" loop autoplay>
+            <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175628699710791690/y2mate.is_-_Skrillex_PEEKABOO_Flowdan_G_Rex_Badders_Official_Audio_-YfpV3al_Q3k-192k-1700361980.mp3?ex=656bec8c&is=6559778c&hm=0876e58e3a1e9e81cac2e105ad024bdaddf628c2f12e727a55ea3a20c697b46f&" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
         <div class="container">
             <div class="avatar-container">
                 <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
@@ -63,4 +67,14 @@
 <script src="app-particles.js"></script>
 <script src="cursor.js"></script>
 <script src="handleclick.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+        const bgAudio = document.getElementById('bgAudio');
+        if (bgAudio) {
+            document.body.addEventListener('click', function () {
+                bgAudio.play();
+            });
+        }
+    });
+</script>
 </html>
