About me update and Discord dm invite added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <p class="greeting-rainbow">Hedge</p>
             <p class="details">
                 <b>he/him</b><br>
-                Im a 28 year old controls engineer in California USA. Hobbies include coding, electronics, and music.
+                Im a controls engineer by trade, and i like to make things. Hobbies include programming, tinkering, and gaming.
             </p>
-            <a href="mailto:trenthancock123@gmail.com" class="pill">
+            <a href="mailto:sorghum_dilator_0o@icloud.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
                     Contact
                     Me
@@ -57,6 +57,9 @@
                     </a>
                     <a href="https://open.spotify.com/playlist/4imvfRqrfpnUEq1tz5aPUg?si=45b7dd26e7e44594" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-spotify fa-lg"></i>
+                    </a>
+                    <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
+                        <i class="fa-brands fa-discord fa-lg"></i>
                     </a>
                 </div>
             </div>
