--- a/index.html
+++ b/index.html
@@ -24,60 +24,61 @@
     <div id="actualContent">
         <div id="particles-js"></div>
         <video loop style="display: none;" id="bgVideo" muted>
-            <source src="https://cdn.discordapp.com/attachments/1067540909736067123/1174507227567099965/Weval_-_Someday_Official_Video_720p_h264.mp4?ex=6567d818&is=65556318&hm=9d217f77fac33c2aca7cb3f31c5bda5a24314adc9c8adf119a9dc2a3b5150f42&" type="video/mp4">
+            <!--<source src="https://cdn.discordapp.com/attachments/1067540909736067123/1174507227567099965/Weval_-_Someday_Official_Video_720p_h264.mp4?ex=6567d818&is=65556318&hm=9d217f77fac33c2aca7cb3f31c5bda5a24314adc9c8adf119a9dc2a3b5150f42&" type="video/mp4">-->
+            <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175702939877253140/veil_-_91088_720p.mp4?ex=656c31b0&is=6559bcb0&hm=6d729f33b77a5320b35437e22086aae1038ce8fe41dc488099856ffe33a110bf&" type="video/mp4">
             Your browser does not support the video element.
         </video>
-        <audio id="bgAudio" loop autoplay>
-            <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175628699710791690/y2mate.is_-_Skrillex_PEEKABOO_Flowdan_G_Rex_Badders_Official_Audio_-YfpV3al_Q3k-192k-1700361980.mp3?ex=656bec8c&is=6559778c&hm=0876e58e3a1e9e81cac2e105ad024bdaddf628c2f12e727a55ea3a20c697b46f&" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-        <div class="container">
-            <div class="avatar-container">
-                <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
-            </div>
-            <p class="greeting">Hello I'm
-            <p class="greeting-rainbow">Hedge</p>
-            <p class="details">
-                <b>he/him</b><br>
-                Im a controls engineer by trade, and i like to make things. Hobbies include programming, tinkering, and gaming.
-            </p>
-            <a href="mailto:sorghum_dilator_0o@icloud.com" class="pill">
-                <i class="fa-solid fa-envelope fa-lg"></i> <b>
-                    Contact
-                    Me
-                </b>
-            </a>
-            <div class="bottom-container">
-                <div class="icon-container">
-                    <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-github fa-lg"></i>
-                    </a>
-                    <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-steam fa-lg"></i>
-                    </a>
-                    <a href="https://open.spotify.com/playlist/4imvfRqrfpnUEq1tz5aPUg?si=45b7dd26e7e44594" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-spotify fa-lg"></i>
-                    </a>
-                    <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-discord fa-lg"></i>
-                    </a>
+            <audio id="bgAudio" loop autoplay>
+                <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175628699710791690/y2mate.is_-_Skrillex_PEEKABOO_Flowdan_G_Rex_Badders_Official_Audio_-YfpV3al_Q3k-192k-1700361980.mp3?ex=656bec8c&is=6559778c&hm=0876e58e3a1e9e81cac2e105ad024bdaddf628c2f12e727a55ea3a20c697b46f&" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            <div class="container">
+                <div class="avatar-container">
+                    <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
+                </div>
+                <p class="greeting">Hello I'm
+                <p class="greeting-rainbow">Hedge</p>
+                <p class="details">
+                    <b>he/him</b><br>
+                    Im a controls engineer by trade, and I like to make things. Hobbies include programming, tinkering, and gaming.
+                </p>
+                <a href="mailto:sorghum_dilator_0o@icloud.com" class="pill">
+                    <i class="fa-solid fa-envelope fa-lg"></i> <b>
+                        Contact
+                        Me
+                    </b>
+                </a>
+                <div class="bottom-container">
+                    <div class="icon-container">
+                        <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-github fa-lg"></i>
+                        </a>
+                        <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-steam fa-lg"></i>
+                        </a>
+                        <a href="https://open.spotify.com/playlist/4imvfRqrfpnUEq1tz5aPUg?si=45b7dd26e7e44594" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-spotify fa-lg"></i>
+                        </a>
+                        <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-discord fa-lg"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
-<script src="particles.js"></script>
-<script src="app-particles.js"></script>
-<script src="cursor.js"></script>
-<script src="handleclick.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', (event) => {
-        const bgAudio = document.getElementById('bgAudio');
-        if (bgAudio) {
-            document.body.addEventListener('click', function () {
-                bgAudio.play();
-            });
-        }
-    });
-</script>
-</html>
+    </body>
+    <script src="particles.js"></script>
+    <script src="app-particles.js"></script>
+    <script src="cursor.js"></script>
+    <script src="handleclick.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const bgAudio = document.getElementById('bgAudio');
+            if (bgAudio) {
+                document.body.addEventListener('click', function () {
+                    bgAudio.play();
+                });
+            }
+        });
+    </script>
+    </html>
