--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     </div>
     <div id="actualContent">
         <div id="particles-js"></div>
+         
+        <!--
         <video loop style="display: none;" id="bgVideo" muted>
-            <!--<source src="https://cdn.discordapp.com/attachments/1067540909736067123/1174507227567099965/Weval_-_Someday_Official_Video_720p_h264.mp4?ex=6567d818&is=65556318&hm=9d217f77fac33c2aca7cb3f31c5bda5a24314adc9c8adf119a9dc2a3b5150f42&" type="video/mp4">-->
             <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175705120785317969/abstract_background_-_107310_Original.mp4?ex=656c33b8&is=6559beb8&hm=a003e6515759445b2f6f81fe1ba0599459cd2754692d8ed8a8f43742d3cbd4a8&" type="video/mp4">
             Your browser does not support the video element.
         </video>
+        -->
+
         <audio id="bgAudio" loop>
             <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175628699710791690/y2mate.is_-_Skrillex_PEEKABOO_Flowdan_G_Rex_Badders_Official_Audio_-YfpV3al_Q3k-192k-1700361980.mp3?ex=656bec8c&is=6559778c&hm=0876e58e3a1e9e81cac2e105ad024bdaddf628c2f12e727a55ea3a20c697b46f&" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -62,6 +65,13 @@
                     <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-discord fa-lg"></i>
                     </a>
+                    <a href="https://ko-fi.com/hedge18247" class="icon-circle" target="_blank">
+                        <i class="fa fa-hand-holding-dollar fa-lg"></i>
+                    </a>
+                    <a href="https://patreon.com/Hedge729?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link" class="icon-circle" target="_blank">
+                        <i class="fa-brands fa-patreon fa-lg"></i>
+                    </a>
+
                 </div>
             </div>
         </div>
