--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         -->
 
         <audio id="bgAudio" loop>
-            <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175628699710791690/y2mate.is_-_Skrillex_PEEKABOO_Flowdan_G_Rex_Badders_Official_Audio_-YfpV3al_Q3k-192k-1700361980.mp3?ex=656bec8c&is=6559778c&hm=0876e58e3a1e9e81cac2e105ad024bdaddf628c2f12e727a55ea3a20c697b46f&" type="audio/mpeg">
+            <source src="https://cdn.discordapp.com/attachments/1177481230225260605/1177481261334405230/San_Holo_-_trip.mp3?ex=6572a9e1&is=656034e1&hm=ae23881b3eb5a2262d6177f966aba073abeb0f40b0aad11049b16e5c7bbe5537&" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div class="container">
