--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="greeting-rainbow">Hedge</p>
             <p class="details">
                 <b>he/him</b><br>
-                Im a controls engineer by trade, and I like to make things. Hobbies include programming, tinkering, and gaming.
+                Im an engineer by trade, and I like to make things. Hobbies include programming, tinkering, and gaming.
             </p>
             <a href="mailto:sorghum_dilator_0o@icloud.com" class="pill">
                 <i class="fa-solid fa-envelope fa-lg"></i> <b>
@@ -51,16 +51,15 @@
                     Me
                 </b>
             </a>
+            <a href="https://ko-fi.com/hedge18247" class="pill">
+                <i class="fa-solid fa-envelope fa-lg"></i> <b>
+                    Kofi Donation
+                </b>
+            </a>
             <div class="bottom-container">
                 <div class="icon-container">
                     <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-github fa-lg"></i>
-                    </a>
-                    <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-steam fa-lg"></i>
-                    </a>
-                    <a href="https://open.spotify.com/playlist/4imvfRqrfpnUEq1tz5aPUg?si=45b7dd26e7e44594" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-spotify fa-lg"></i>
                     </a>
                     <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-discord fa-lg"></i>
