--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     Me
                 </b>
             </a>
-            <a href="https://ko-fi.com/hedge18247" class="pill">
-                <i class="fa-solid fa-envelope fa-lg"></i> <b>
+            <a href="https://ko-fi.com/hedge18247" class="pill" style="margin-top: 10px";>
+                <i class="fa-solid fa-hand-holding-dollar fa-lg"></i> <b>
                     Kofi Donation
                 </b>
             </a>
