--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-discord fa-lg"></i>
                     </a>
-                    <a href="https://ko-fi.com/hedge18247" class="icon-circle" target="_blank">
-                        <i class="fa fa-hand-holding-dollar fa-lg"></i>
+                    <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
+                        <i class="fa-brands fa-steam fa-lg"></i>
                     </a>
                     <a href="https://patreon.com/Hedge729?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link" class="icon-circle" target="_blank">
                         <i class="fa-brands fa-patreon fa-lg"></i>
