--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-image: url('https://i.imgur.com/YbmpmOc.gif');">
     <div class="cursor-dot" data-cursor-dot></div>
     <div class="cursor-outline" data-cursor-outline></div>
     <div class="overlay" id="volumeWarning">
@@ -23,13 +23,6 @@
     </div>
     <div id="actualContent">
         <div id="particles-js"></div>
-
-        <!--
-        <video loop style="display: none;" id="bgVideo" muted>
-            <source src="https://cdn.discordapp.com/attachments/1175628596220543048/1175705120785317969/abstract_background_-_107310_Original.mp4?ex=656c33b8&is=6559beb8&hm=a003e6515759445b2f6f81fe1ba0599459cd2754692d8ed8a8f43742d3cbd4a8&" type="video/mp4">
-            Your browser does not support the video element.
-        </video>
-        -->
 
         <audio id="bgAudio" loop>
             <source src="https://cdn.discordapp.com/attachments/1177481230225260605/1177481261334405230/San_Holo_-_trip.mp3?ex=6572a9e1&is=656034e1&hm=ae23881b3eb5a2262d6177f966aba073abeb0f40b0aad11049b16e5c7bbe5537&" type="audio/mpeg">
