--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hedge's Site</title>
     <meta content="Hedge" property="og:title">
-    <meta content="Welcome" property="og:description">
+    <meta content="About Me" property="og:description">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/x-icon" href="https://github.com/CodeHedge.png">
@@ -25,7 +25,7 @@
         <div id="particles-js"></div>
 
         <audio id="bgAudio" loop>
-            <source src="https://cdn.discordapp.com/attachments/1177481230225260605/1177481261334405230/San_Holo_-_trip.mp3?ex=6572a9e1&is=656034e1&hm=ae23881b3eb5a2262d6177f966aba073abeb0f40b0aad11049b16e5c7bbe5537&" type="audio/mpeg">
+            <source src="https://cdn.discordapp.com/attachments/1175750413778178091/1179817459109347440/Flume_Nice_2_know_u.mp3?ex=657b29a2&is=6568b4a2&hm=00f20a5128742545b1af7209a6e79fcdc1a13cdb0455051229f8ab3d977db863&" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div class="container">
