--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="particles-js"></div>
 
         <audio id="bgAudio" loop>
-            <source src="https://cdn.discordapp.com/attachments/1175750413778178091/1179817459109347440/Flume_Nice_2_know_u.mp3?ex=657b29a2&is=6568b4a2&hm=00f20a5128742545b1af7209a6e79fcdc1a13cdb0455051229f8ab3d977db863&" type="audio/mpeg">
+            <source src="https://cdn.hedge.games/Flume_Nice_2_know_u.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div class="container">
@@ -44,28 +44,29 @@
                     Me
                 </b>
             </a>
-            <a href="https://ko-fi.com/hedge18247" class="pill" style="margin-top: 10px" ;>
-                <i class="fa-solid fa-hand-holding-dollar fa-lg"></i> <b>
-                    Kofi Donation
-                </b>
-            </a>
-            <div class="bottom-container">
-                <div class="icon-container">
-                    <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-github fa-lg"></i>
-                    </a>
-                    <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-discord fa-lg"></i>
-                    </a>
-                    <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-steam fa-lg"></i>
-                    </a>
-                    <a href="https://patreon.com/Hedge729?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-patreon fa-lg"></i>
-                    </a>
+            <a href="https://tinyurl.com/hedge-patreon" class="icon-circle" target="_blank">
+                <a href="" class="pill" style="margin-top: 10px" ;>
+                    <i class="fa-solid fa-patreon fa-lg"></i> <b>
+                        Patreon Donation
+                    </b>
+                </a>
+                <div class="bottom-container">
+                    <div class="icon-container">
+                        <a href="https://github.com/CodeHedge" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-github fa-lg"></i>
+                        </a>
+                        <a href="https://discord.gg/kbzpSrTN" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-discord fa-lg"></i>
+                        </a>
+                        <a href="https://steamcommunity.com/profiles/76561197979713029/" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-steam fa-lg"></i>
+                        </a>
+                        <a href="https://tinyurl.com/hedge-kofi" class="icon-circle" target="_blank">
+                            <i class="fa-brands fa-hand-holding-dollar fa-lg"></i>
+                        </a>
 
+                    </div>
                 </div>
-            </div>
         </div>
     </div>
 </body>
