--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
             <a href="https://tinyurl.com/hedge-patreon" class="pill" style="margin-top: 10px" ;>
                 <i class="fa-solid fa-patreon fa-lg"></i> <b>
-                    Kofi Donation
+                    Patreon Donation
                 </b>
             </a>
             <div class="bottom-container">
