--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </b>
             </a>
             <a href="https://tinyurl.com/hedge-patreon" class="pill" style="margin-top: 10px" ;>
-                <i class="fa-solid fa-patreon fa-lg"></i> <b>
+                <i class="fa-brands fa-patreon"></i> fa-lg"></i> <b>
                     Patreon Donation
                 </b>
             </a>
@@ -61,7 +61,7 @@
                         <i class="fa-brands fa-steam fa-lg"></i>
                     </a>
                     <a href="https://tinyurl.com/hedge-kofi" class="icon-circle" target="_blank">
-                        <i class="fa-brands fa-hand-holding-dollar fa-lg"></i>
+                        <i class="fa-solid fa-hand-holding-dollar fa-lg"></i>
                     </a>
 
                 </div>
