--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </b>
             </a>
             <a href="https://tinyurl.com/hedge-patreon" class="pill" style="margin-top: 10px" ;>
-                <i class="fa-brands fa-patreon"></i> fa-lg"></i> <b>
+                <i class="fa-brands fa-patreon"></i> <b>
                     Patreon Donation
                 </b>
             </a>
