--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="particles-js"></div>
 
         <audio id="bgAudio" loop>
-            <source src="https://cdn.discordapp.com/attachments/1175750413778178091/1179817459109347440/Flume_Nice_2_know_u.mp3?ex=657b29a2&is=6568b4a2&hm=00f20a5128742545b1af7209a6e79fcdc1a13cdb0455051229f8ab3d977db863&" type="audio/mpeg">
+            <source src="https://cdn.hedge.games/Flume_Nice_2_know_u.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div class="container">
