--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     bgAudio.play();
                     audioPlayed = true;
                     volumeWarning.style.display = 'none';
-                    body.style.backgroundImage = "url('https://i.imgur.com/YbmpmOc.gif')";
+                    body.style.backgroundImage = "url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExb2d3cDV2NXMybHFwdTVoMGUxNm0zYTc4ZGx2bTJsaDFxY251YmZ3aiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3ov9jEnypymbFQJ9CM/giphy.gif')";
                 }
             });
         }
