Better mobile layout

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Your browser does not support the audio element.
         </audio>
 
-        <div class="container">
+        <div class="maincontainer">
             <div class="avatar-container">
                 <img src="https://github.com/CodeHedge.png" alt="Avatar" class="avatar">
             </div>
